--- a/src/go/day1/BUILD.bazel
+++ b/src/go/day1/BUILD.bazel
@@ -1,9 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
-exports_files([
-    "input.txt",
-])
-
 go_library(
     name = "day1_lib",
     srcs = ["main.go"],
@@ -13,7 +9,7 @@ go_library(
 
 go_binary(
     name = "day1",
-    data = ["input.txt"],
+    data = ["//files/day1:input.txt"],
     embed = [":day1_lib"],
     visibility = ["//visibility:public"],
 )
