--- a/src/go/day2/BUILD.bazel
+++ b/src/go/day2/BUILD.bazel
@@ -1,10 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
-exports_files([
-    "input.txt",
-    "test.txt",
-])
-
 go_library(
     name = "day2_lib",
     srcs = ["main.go"],
@@ -15,9 +10,11 @@ go_library(
 
 go_binary(
     name = "day2",
+
     data = [
-        "input.txt",
-        "test.txt",
+        "//files/day2:input.txt",
+        "//files/day2:test_input.txt"
+
     ],
     embed = [":day2_lib"],
     visibility = ["//visibility:public"],
