Day 6 GoLang Solution 🏌️🎄

--- a/src/go/day5/BUILD.bazel
+++ b/src/go/day5/BUILD.bazel
@@ -12,7 +12,7 @@ go_binary(
     name = "day5",
     data = [
         "//files/day5:input.txt",
-        "//files/day5:test_input.txt"
+        "//files/day5:test_input.txt",
     ],
     embed = [":day5_lib"],
     visibility = ["//visibility:public"],
