Python Day 11 Solution 🐍🐒

--- a/3rd_party/python/requirements.txt
+++ b/3rd_party/python/requirements.txt
@@ -32,6 +32,8 @@ mypy-extensions==0.4.3
     # via
     #   black
     #   mypy
+numpy==1.23.5
+    # via -r requirements.in
 packaging==21.3
     # via
     #   build
